<resources>
    <string name="app_name">gongC</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- 공통 -->
    <string name="email">Email</string>
    <string name="input_email">email@email.com</string>
    <string name="password">Password</string>
    <string name="input_password">password</string>
    <string name="wrong_password">Wrong Password!</string>

    <!-- SIGN IN 프래그먼트 -->
    <string name="sign_in">LOG IN</string>
    <string name="first_time">First time in GongC?</string>

    <!-- SIGN UP 프래그먼트 -->
    <string name="sign_up">SIGN UP</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="nickname">Nickname</string>
    <string name="input_nickname">nickname</string>

    <!-- 메인 화면 -->
    <string name="main_welcome_back">Welcome back,</string>
    <string name="main_nickname">김눈송</string>

    <!-- 데일리 그래프 프래그먼트 -->
    <string name="daily_msg">Today\'s learning status</string>
    <!-- 위클리 그래프 프래그먼트 -->
    <string name="weekly_msg">This week\'s learning status</string>

    <!-- 데일리, 위클리 프래그먼트 공통-->
    <string name="focused">Focused</string>
    <string name="played">Played</string>
    <string name="focusedTime">000 minutes</string>
    <string name="playedTime">000 minutes</string>
    <string name="total">Total</string>
    <string name="totalTime">000 minutes</string>
</resources>