<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.sign.SignUpActivity">
    <TextView
        android:id="@+id/txt_signup_title"
        android:text="@string/sign_up"
        android:textSize="36sp"
        android:fontFamily="@font/josefinsansbold"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_signup_email"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/txt_signup_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="60dp"
        android:paddingVertical="12dp"
        android:paddingHorizontal="12dp"
        >
        <TextView
            android:id="@+id/txt_signup_email"
            android:fontFamily="@font/josefinsanssemibold"
            android:textSize="12sp"
            android:text="@string/email"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <EditText
            android:id="@+id/edit_signup_email"
            android:hint="@string/input_email"
            android:autofillHints="@string/email"
            android:inputType="textEmailAddress"
            android:fontFamily="@font/josefinsansmedium"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/txt_signup_email"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="12dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_signin_password"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/layout_signup_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="60dp"
        android:paddingVertical="12dp"
        android:paddingHorizontal="12dp"
        >
        <TextView
            android:id="@+id/txt_signup_password"
            android:text="@string/password"
            android:fontFamily="@font/josefinsanssemibold"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <EditText
            android:id="@+id/edit_signup_password"
            android:autofillHints="@string/password"
            android:hint="@string/input_password"
            android:inputType="textPassword"
            android:fontFamily="@font/josefinsansmedium"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/txt_signup_password"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="12dp"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_signup_confirmpw"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/layout_signin_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="60dp"
        android:paddingVertical="12dp"
        android:paddingHorizontal="12dp"
        >
        <TextView
            android:id="@+id/txt_signup_confirmpw"
            android:text="@string/confirm_password"
            android:fontFamily="@font/josefinsanssemibold"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <EditText
            android:id="@+id/edit_signup_confirmpw"
            android:autofillHints="@string/confirm_password"
            android:hint="@string/input_password"
            android:inputType="textPassword"
            android:fontFamily="@font/josefinsansmedium"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/txt_signup_confirmpw"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="12dp"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_signup_nickname"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/layout_signup_confirmpw"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="60dp"
        android:paddingVertical="12dp"
        android:paddingHorizontal="12dp"
        >
        <TextView
            android:id="@+id/txt_signup_nickname"
            android:text="@string/nickname"
            android:fontFamily="@font/josefinsanssemibold"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <EditText
            android:id="@+id/edit_signup_nickname"
            android:autofillHints="@string/password"
            android:hint="@string/input_nickname"
            android:inputType="text"
            android:fontFamily="@font/josefinsansmedium"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/txt_signup_nickname"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="12dp"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <TextView
        android:id="@+id/txt_signup_errormsg"
        android:text="@string/wrong_password"
        android:fontFamily="@font/josefinsanssemibold"
        android:visibility="invisible"
        android:textColor="@color/red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/layout_signup_nickname"
        app:layout_constraintEnd_toEndOf="@+id/layout_signup_nickname"
        />
    <Button
        android:id="@+id/button_signup"
        android:text="@string/sign_up"
        android:fontFamily="@font/josefinsansbold"
        android:textSize="20sp"
        android:backgroundTint="@color/greyish_green"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_signup_errormsg"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="60dp"
        />



</androidx.constraintlayout.widget.ConstraintLayout>