<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/txt_daily_msg"
        android:text="@string/daily_msg"
        android:fontFamily="@font/josefinsanssemibold"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/piechart"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_daily_msg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_daily_focused"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/piechart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <View
            android:id="@+id/view_square_focused"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:background="@color/pastel_green"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />
        <TextView
            android:id="@+id/txt_daily_focused"
            android:text="@string/focused"
            android:fontFamily="@font/josefinsanssemibold"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/view_square_focused"
            app:layout_constraintStart_toEndOf="@+id/view_square_focused"
            app:layout_constraintBottom_toBottomOf="@+id/view_square_focused"
            />
        <TextView
            android:id="@+id/txt_daily_focusedTime"
            android:text="@string/focusedTime"
            android:fontFamily="@font/josefinsanssemibold"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/view_square_focused"
            app:layout_constraintStart_toEndOf="@+id/txt_daily_focused"
            app:layout_constraintBottom_toBottomOf="@+id/txt_daily_focused"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_daily_played"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/layout_daily_focused"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <View
            android:id="@+id/view_square_played"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:background="@color/pastel_red"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />
        <TextView
            android:id="@+id/txt_daily_played"
            android:text="@string/played"
            android:fontFamily="@font/josefinsanssemibold"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/view_square_played"
            app:layout_constraintStart_toEndOf="@+id/view_square_played"
            app:layout_constraintBottom_toBottomOf="@+id/view_square_played"
            />
        <TextView
            android:id="@+id/txt_daily_playedTime"
            android:text="@string/playedTime"
            android:fontFamily="@font/josefinsanssemibold"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/txt_daily_played"
            app:layout_constraintStart_toEndOf="@+id/txt_daily_played"
            app:layout_constraintBottom_toBottomOf="@+id/txt_daily_played"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/layout_daily_played"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <TextView
            android:id="@+id/txt_daily_total"
            android:text="@string/total"
            android:fontFamily="@font/josefinsanssemibold"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
        <TextView
            android:id="@+id/txt_daily_totalTime"
            android:text="@string/totalTime"
            android:fontFamily="@font/josefinsanssemibold"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txt_daily_total"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>