<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/greyish_green"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txt_main_logo"
        android:text="@string/app_name"
        android:textSize="52sp"
        android:fontFamily="@font/josefinsansmedium"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="240dp"
        android:background="@drawable/bg_border_logo"
        android:paddingHorizontal="24dp"
        android:paddingBottom="16dp"
        />

    <Button
        android:id="@+id/button_main_signin"
        android:text="@string/sign_in"
        android:fontFamily="@font/josefinsansbold"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:background="@drawable/bg_border_logo"
        android:backgroundTint="@null"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_main_logo"
        android:layout_marginTop="200dp"
        android:layout_marginHorizontal="60dp"
        android:paddingVertical="4dp"
        />
    <Button
        android:id="@+id/button_main_signup"
        android:text="@string/sign_up"
        android:fontFamily="@font/josefinsansbold"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:background="@drawable/bg_border_logo"
        android:backgroundTint="@null"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_main_signin"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="60dp"
        android:paddingVertical="4dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>